<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/layout_border"
        android:padding="4dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.48"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/foto_film_fav"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/judul_film_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_toEndOf="@id/foto_film_fav"
            android:maxLines="1"
            android:text="@string/judul_film"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rilis_film_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judul_film_fav"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:layout_toEndOf="@+id/foto_film_fav"
            android:layout_toRightOf="@id/foto_film_fav"
            android:text="@string/rilis"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deskripsi_film_fav"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rilis_film_fav"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:layout_toEndOf="@+id/foto_film_fav"
            android:layout_toRightOf="@id/foto_film_fav"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/deksripsi_film"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_remove_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deskripsi_film_fav"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/foto_film_fav"
            android:text="@string/btn_remove"
            android:textSize="10sp" />"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>